<resources>
    <string name="app_name">نانوایی</string>
    <string name="btn1">مواد اولیه</string>
    <string name="btn2">قرضه ها</string>
    <string name="btn5">مشتریان</string>
    <string name="btnEmployee">کارمندان</string>
    <string name="btn4">گزارشات</string>
    <string name="add_new">اضافه کردن</string>
    <string name="add_new_item">اضافه کردن مواد</string>
    <string name="name">اسم جنس را وارد کنید</string>
    <string name="amount">مقدار جنس را وارد کنید</string>
    <string name="price">قیمت فی واحد را وارد کنید</string>
    <string name="date"> تاریخ را وارد کنید ۱۴۰۲/۱/۱۲</string>
    <string name="descriptions">در مورد جنس توضیحات دهید</string>
    <string name="save">ذخیره</string>
    <string name="clear">پاک کردن</string>
    <string name="select_date">تاریخ</string>
    <string name="name_of_material">اسم مواد</string>
    <string name="description_matrial">توضیحات در مورد جنس</string>
    <string name="btn_detials">جزئیات</string>
    <string name="delete">حذف</string>
    <string name="update">بروزرسانی</string>
    <string name="datedd">Date</string>
    <string name="amounttt">مقدار</string>
    <string name="custome_price">قیمت</string>
    <string name="dddd">بروز رسانی</string>
    <string name="customer">اسم مشتری را وارد کنید</string>
    <string name="amount_loans">مقدار قرضه را وارد کنید</string>
    <string name="date_loans">تاریخ قرضه را وارد کنید</string>
    <string name="phone">شماره تماس مشتری را وارد کنید</string>
    <string name="loansDesc">در مورد توضیحات دهید</string>
    <string name="custmer_address">آدرس مشتری را وارد کنید</string>
    <string name="customer_phone">شماره تماس مشتری را وارد کنید</string>
    <string name="customer_rag_date">تاریخ قرار داد را وارد کنید</string>
    <string name="customer_disd">در مورد قرار داد توضیحات دهید</string>
    <string name="postion">وظیفه کارمند را مشخص کنید</string>
    <string name="salary">معاش کارمند را مشخص کنید</string>
    <string name="sales">فروشات</string>
    <string name="amountbrigth">تعداد نان را وارد کنید</string>
    <string name="priceBright">قیمت فی نان را وارد کنید</string>
    <string name="customer_name">اسم مشتری را وارد کنید</string>
    <string name="todat">امروز</string>
    <string name="employeName">اسم کارمند را وارد کنید</string>
    <string name="employeeAddress">ادرس کارمند را وارد کنید</string>
    <string name="employePhone">شماره تماس کارمند را وارد کنید</string>
    <string name="employeeType">نوع کار کارمند را وارد کنید</string>
    <string name="employeeSalaey">مقدار معاش کارمند در ماه را وارد کنید</string>
    <string name="dateSael">تاریخ فروش را وارد کنید</string>
    <string name="employeeDate">تاریخ قرار داد را وارد کنید</string>
    <string name="loansToa">مثدار پول را وارد کنید</string>
    <string name="dateSale">تاریخ را وارد کنید</string>
    <string name="phonC">0770318869</string>
    <string name="_1402_04_04">1402/04/04</string>
    <string name="address">دشت برچی ریگریشن</string>
    <string name="dd">عبدالطیف پدرام</string>
    <string name="ddrr">مدیر هوتل پنج ستاره در مدت یک سال هر نان به قیمت ۹ اففانی قرار داد شد</string>
    <string name="_0770318869">0770318869</string>
    <string name="ddet">نان پز</string>
    <string name="_12000">12000</string>
    <string name="dd3">کابل دشت برچی</string>
    <string name="kkh">به مدت یکسال قرار داد صورت گرفت که از اول صبح تا شام پختن نان به دوش وی میباشد و در روز های حمعه رخصت میباشد</string>
    <string name="_077_031_88_49">077 031 88 49</string>
    <string name="_499">499</string>
    <string name="adb">عبدالرحمان</string>
    <string name="aad">بابت خریداری ۱۰۰ دانه نان از خساب قراصه</string>
    <string name="_2200">2200</string>
    <string name="sds">20</string>
    <string name="rer">آرد</string>
    <string name="_1402_02_03">1402-02-03</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="sd">عبدالله</string>
    <string name="ddate">تاریخ مورد نظرتان را وارد کنید</string>
    <string name="brigth">تعداد نان به فروش رسیده:</string>
    <string name="ds">100</string>
    <string name="wsds">مقدار پول به قرضه:  </string>
    <string name="wew">مقدار پول خریداری شده:</string>
    <string name="سیس">اجرا</string>
    <string name="شسش">گزارشات</string>


</resources>