<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/list_back"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saleCustomList_btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/saleCustomList_btnUpdate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:text="@string/dddd" />

        <TextView
            android:id="@+id/saleCustomList_Customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saleCustomList_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/_10" />


        <TextView
            android:id="@+id/saleCustomList_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/_15" />


        <TextView
            android:id="@+id/saleCustomList_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/_1402_02_03" />


    </LinearLayout>

</LinearLayout>