<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewLoansActivity">



    <EditText
        android:layout_marginBottom="5dp"
        android:id="@+id/txt_customer"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/customer"
        android:inputType="text"
        android:textDirection="anyRtl" />


    <EditText
        android:layout_marginBottom="5dp"
        android:id="@+id/txt_amount"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/amount_loans"
        android:inputType="number"
        android:textDirection="anyRtl" />


    <EditText
        android:layout_marginBottom="5dp"
        android:id="@+id/txt_date"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/date_loans"
        android:inputType="date"
        android:textDirection="anyRtl" />

    <EditText
        android:layout_marginBottom="5dp"
        android:id="@+id/txt_phone"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/phone"
        android:inputType="number"
        android:textDirection="anyRtl" />

    <EditText
        android:layout_marginBottom="5dp"
        android:id="@+id/txt_description"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:autofillHints="name"
        android:gravity="top"
        android:hint="@string/loansDesc"
        android:inputType="textMultiLine"
        android:textDirection="anyRtl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:text="@string/clear" />
    </LinearLayout>





</LinearLayout>