<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@drawable/list_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/employeCustomList_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/_0770318869" />


            <Button
                android:id="@+id/employe_btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/employeCustomList_btnUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/dddd" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/employeCustomList_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/dd3" />

                <TextView
                    android:id="@+id/employeCustomList_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/name_of_material"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/employeCustomList_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/_1402_04_04" />

                    <TextView
                        android:id="@+id/employeCustomList_salary"
                        android:layout_width="wrap_content"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_12000" />

                    <TextView
                        android:id="@+id/employeCustomList_Postiton"
                        android:layout_width="wrap_content"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ddet" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/employeCustomList_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kkh" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>