<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/list_back"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">



            <Button
                android:id="@+id/customList_btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/customList_btnUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/dddd" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/customList_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_1402_02_03" />

                <TextView
                    android:id="@+id/customList_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/_2200" />

                <TextView
                    android:id="@+id/customList_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sds" />

                <TextView
                    android:id="@+id/customList_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/rer"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/customList_detials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_matrial" />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>