<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:background="@drawable/list_back"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loansCustomList_phoneNumber"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/_077_031_88_49" />


            <Button
                android:id="@+id/loansCustomList_btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/loansCustomList_btnUpdate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/dddd" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/loansCustomList_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/_1402_04_04" />


                <TextView
                    android:id="@+id/loansCustomList_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/_499"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/loansCustomList_Customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/adb"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/loansCustomList_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aad" />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>